<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyStats</string>
    <string name="action_settings">Settings</string>
    
    <string name="select_date">Select Date</string>
    <string name="enter_stats">Enter Stats</string>
    <string name="enter_date">Date (D-M-Y): </string>
    <string name="laps">Laps:</string>
    <string name="set1">Set 1</string>
    <string name="set2">Set 2</string>
    <string name="distance">Distance(m): </string>
    <string name="time">Time (min:sec): </string>
    <string name="default_laps">0</string>
    <string name="default_distance">0</string>
    <string name="default_time">0:0</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="statsTitle">Enter Statistics</string>
       
</resources>
